<resources>
    <string name="app_name">Eventsapp</string>
    <string name="action_settings">Settings</string>

    <string name="error_loading">Ошибка при загрузке данных. Проверьте подключение к сети.</string>
    
    <string name="postline">Лента</string>
    <string name="to_favorites">Сохранить</string>
    <string name="evaluate">Оценить</string>
    <string name="remind">Напоминание</string>
    <string name="details">Детали</string>
    <string name="show_on_map">На карте</string>

    <string name="test_string">Тест</string>
    <string name="test_address">ул. Козленская, д.33</string>
    <string name="test_time">18 февраля 19:00 - 21:00</string>

    <string name="feed">Лента</string>
    <string name="search">Поиск</string>
    <string name="liked">Избранное</string>
    <string name="settings">Настройки</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="common_signin_button_text">Войти</string>
    <string name="not_now">Не сейчас</string>
    <string name="need_to_login">Необходима авторизация</string>
    <string name="auth_failure">Неудачная авторизация</string>
    <string name="success_log_out">Вы вышли из профиля</string>
    <string name="failure_log_out">Ошибка при выходе из профиля</string>
    <string name="logout">Выйти</string>
    <string name="profile">Профиль</string>
    
    <string name="city_label">Город</string>
    <string name="notification_label">Уведомления</string>

    <string name="need_internet_connection">Необходимо подключение к сети Интернет</string>

    <string name="unsuccessful_add_to_favorires">Не удалось добавить в избранное</string>
    <string name="unsuccessful_remove_favorire">Не удалось удалить из избранного</string>
    <string name="error_favorites_loading">Не удалось загрузить избранное</string>
    <string name="need_auth">Необходима авторизация для просмотра избранного</string>

    <string-array name="cities">
        <item>Вологда</item>
    </string-array>

    <string name="server_client_id">4763853757-hgedrqim8lj2glrnn7gk66c6qreb56uc.apps.googleusercontent.com</string>
</resources>
