<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/profile_app_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            android:title="@string/profile"/>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomTabLayout">
        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_profile_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/user"
            android:paddingBottom="8dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#fff"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/user_profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:padding="@dimen/medium_margin"
            android:layout_centerHorizontal="true"
            android:textSize="24sp"
            android:layout_below="@id/user_profile_profile_image"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/user_profile_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:layout_marginTop="@dimen/medium_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/medium_margin">

            <TextView
                android:id="@+id/city_label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_label"
                android:textColor="@color/colorGrayDark"
                android:fontFamily="sans-serif"
                android:layout_centerVertical="true"
                android:textSize="16sp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/cities"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_profile_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:layout_marginTop="@dimen/medium_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/medium_margin">

            <TextView
                android:id="@+id/notification_label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_label"
                android:textColor="@color/colorGrayDark"
                android:fontFamily="sans-serif"
                android:layout_centerVertical="true"
                android:textSize="16sp"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/user_profile_logout"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:layout_marginTop="@dimen/medium_margin">

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:background="@color/colorAccent"
            android:text="@string/logout"
            android:textColor="@color/colorWhite"
            android:elevation="2dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</LinearLayout>