<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/horizontal_margin">

        <RelativeLayout
            android:id="@+id/detail_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <!-- Заголовок поста -->
            <TextView
                android:id="@+id/detail_post_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/margin_text"
                android:layout_toLeftOf="@+id/event_rating"
                android:layout_alignLeft="@+id/detail_post_date"
                android:layout_alignStart="@+id/detail_post_date" />

            <!-- Рейтинг события -->
            <TextView
                android:id="@+id/event_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorWhite"
                android:text="0.0"
                android:layout_marginRight="42dp"
                android:layout_marginEnd="42dp"
                android:layout_marginTop="9dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_star_border"
                android:layout_alignTop="@+id/event_rating"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="1dp"
                android:layout_marginRight="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin" />

            <!-- Дата -->
            <TextView
                android:id="@+id/detail_post_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:fontFamily="sans-serif"
                android:layout_marginTop="@dimen/margin_text"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_below="@id/detail_post_title" />

            <!-- Адрес -->
            <TextView
                android:id="@+id/detail_post_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:fontFamily="sans-serif"
                android:layout_marginTop="@dimen/margin_text"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:paddingBottom="@dimen/text_margin"
                android:layout_below="@id/detail_post_date" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/detail_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/horizontal_margin"
            android:paddingBottom="@dimen/horizontal_margin"
            android:layout_below="@+id/detail_header"
            android:background="@drawable/layout_divider">

            <Button
                android:id="@+id/add_to_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_action_bookmark_border"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:text="@string/to_favorites" />

            <Button
                android:id="@+id/evaluate_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_action_favorite_border"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:text="@string/evaluate" />

            <Button
                android:id="@+id/add_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_action_date_range"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:text="@string/remind" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/detail_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/horizontal_margin"
            android:background="@color/colorWhite"
            android:layout_below="@+id/detail_buttons">

            <TextView
                android:id="@+id/detail_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="true"
                android:text="@string/details"
                android:textColor="@android:color/darker_gray"
                android:fontFamily="sans-serif"
                android:textSize="12sp" />

            <!-- Описание события -->
            <TextView
                android:id="@+id/detail_post_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/primary_text_light"
                android:autoLink="all"
                android:textIsSelectable="true"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_below="@id/detail_label"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/detail_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_below="@id/detail_info">

            <TextView
                android:id="@+id/detail_map_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/show_on_map"
                android:textAllCaps="true"
                android:textColor="@android:color/darker_gray"
                android:padding="@dimen/horizontal_margin"
                android:fontFamily="sans-serif"
                android:textSize="12sp" />

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                map:cameraZoom="18"
                map:mapType="normal"
                map:liteMode="true"
                android:layout_below="@id/detail_map_label"/>

        </RelativeLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
